test scroll bug on iphone

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
     justify-content: center;
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: 100%;
     font-size: 14px;
     font-family: 'Kanit', sans-serif;
     overflow: hidden
